[gd_scene load_steps=19 format=2]

[ext_resource path="res://Systems/Classes/Artifact/Artifact2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Systems/Classes/UI/_building_blocks/Clock/_assets/watch.png" type="Texture" id=2]
[ext_resource path="res://Content/Artifacts/physics-book/physics-book.tres" type="Resource" id=3]
[ext_resource path="res://_shared_assets/Fonts/Jost/static/Jost-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Systems/Classes/UI/_building_blocks/ButtonCoil/_assets/coil_logo_normal.png" type="Texture" id=5]
[ext_resource path="res://Systems/Classes/UI/_building_blocks/ButtonArrow/_assets/arrow_normal.png" type="Texture" id=6]
[ext_resource path="res://Systems/Classes/UI/_building_blocks/ButtonArrow/_assets/arrow_disabled.png" type="Texture" id=8]
[ext_resource path="res://Systems/Classes/UI/_building_blocks/ButtonCoil/_assets/coil_logo_hover.png" type="Texture" id=9]
[ext_resource path="res://Systems/Classes/UI/_building_blocks/Button/Button.tscn" type="PackedScene" id=10]
[ext_resource path="res://Systems/Classes/UI/_building_blocks/Dashboard/Dashboard.gd" type="Script" id=11]
[ext_resource path="res://Systems/Classes/UI/_building_blocks/ButtonArrow/_assets/arrow_hover.png" type="Texture" id=12]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFont" id=2]
size = 35
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 35
use_mipmaps = true
use_filter = true
extra_spacing_bottom = -20
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=6]
size = 64
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 64
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="DashBoard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.6875, 0.64856, 0.515625, 0.596078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clue" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1500.0
margin_top = 810.0
margin_right = -1460.0
margin_bottom = 850.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClueSprite" type="Sprite" parent="Clue"]
visible = false
position = Vector2( 290, 130 )
scale = Vector2( 1.71218, 1.71218 )
texture = ExtResource( 12 )

[node name="PreviousClue" type="TextureButton" parent="Clue"]
visible = false
margin_left = 30.0
margin_top = 90.0
margin_right = 38.0
margin_bottom = 98.0
rect_scale = Vector2( 10, 10 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
texture_disabled = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextClue" type="TextureButton" parent="Clue"]
visible = false
margin_left = 550.0
margin_top = 170.0
margin_right = 558.0
margin_bottom = 178.0
rect_rotation = 180.0
rect_scale = Vector2( 10, 10 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
texture_disabled = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Clue"]
margin_left = 150.0
margin_top = -50.0
margin_right = 377.0
margin_bottom = 2.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Secret clues"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoClues" type="Label" parent="Clue"]
margin_left = 70.0
margin_top = 20.0
margin_right = 520.0
margin_bottom = 237.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You don't have any clues for this place yet.
Clues can be found by trading with someone"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Artifacts" type="Node2D" parent="."]
position = Vector2( 960, 350 )

[node name="A1" parent="Artifacts" instance=ExtResource( 1 )]
visible = false
position = Vector2( -630, 50 )
artifact = ExtResource( 3 )

[node name="A2" parent="Artifacts" instance=ExtResource( 1 )]
visible = false
position = Vector2( -210, 50 )
artifact = ExtResource( 3 )

[node name="A3" parent="Artifacts" instance=ExtResource( 1 )]
visible = false
position = Vector2( 210, 50 )
artifact = ExtResource( 3 )

[node name="A4" parent="Artifacts" instance=ExtResource( 1 )]
visible = false
position = Vector2( 630, 50 )
artifact = ExtResource( 3 )

[node name="PreviousArtifact" type="TextureButton" parent="Artifacts"]
visible = false
margin_left = -910.0
margin_right = -902.0
margin_bottom = 8.0
rect_scale = Vector2( 10, 10 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
texture_disabled = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextArtifact" type="TextureButton" parent="Artifacts"]
visible = false
margin_left = 920.0
margin_top = 80.0
margin_right = 928.0
margin_bottom = 88.0
rect_rotation = 180.0
rect_scale = Vector2( 10, 10 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
texture_disabled = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Artifacts"]
margin_left = -90.0
margin_top = -340.0
margin_right = 97.0
margin_bottom = -288.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Artifacts"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoArtifacts" type="Label" parent="Artifacts"]
margin_left = -400.0
margin_top = -140.0
margin_right = 460.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You don't have any Artifact yet.
Artifacts can be found in Secret Treasures.
Secret Treasures can be found by using your Sense Of Discovery at the places Clues are hinting to you"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clock" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -10.0
margin_right = 80.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="watch" type="Sprite" parent="Clock"]
position = Vector2( 160, -160 )
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="Time" type="Label" parent="Clock"]
margin_left = 90.0
margin_top = -310.0
margin_right = 220.0
margin_bottom = -237.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "10:30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coil" type="Control" parent="."]
margin_left = 1090.0
margin_top = 760.0
margin_right = 1130.0
margin_bottom = 800.0

[node name="ButtonCoil" type="TextureButton" parent="Coil"]
margin_left = -20.0
margin_top = 10.0
margin_right = 12.0
margin_bottom = 42.0
rect_scale = Vector2( 10, 10 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Coil"]
margin_left = 26.0
margin_right = 256.0
margin_bottom = 50.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Mystery Coil"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 1520.0
margin_top = 770.0
margin_right = 1890.0
margin_bottom = 1065.0
rect_min_size = Vector2( 370, 0 )
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonFullscreen" parent="Menu" instance=ExtResource( 10 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 370.0
margin_bottom = 51.0
size_flags_horizontal = 1
text = "Fullscreen: ON"

[node name="ButtonSounds" parent="Menu" instance=ExtResource( 10 )]
margin_left = 0.0
margin_top = 61.0
margin_right = 370.0
margin_bottom = 112.0
size_flags_horizontal = 1
text = "Sounds: ON"

[node name="ButtonMusic" parent="Menu" instance=ExtResource( 10 )]
margin_left = 0.0
margin_top = 122.0
margin_right = 370.0
margin_bottom = 173.0
size_flags_horizontal = 1
text = "Music: ON"

[node name="ButtonAbout" parent="Menu" instance=ExtResource( 10 )]
margin_left = 0.0
margin_top = 183.0
margin_right = 370.0
margin_bottom = 234.0
size_flags_horizontal = 1
text = "About"

[node name="ButtonQuit" parent="Menu" instance=ExtResource( 10 )]
margin_left = 0.0
margin_top = 244.0
margin_right = 370.0
margin_bottom = 295.0
size_flags_horizontal = 1
text = "Quit"

[node name="Credits" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Credits"]
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 1895.0
margin_bottom = 1055.0
custom_constants/separation = 40

[node name="Title" type="VBoxContainer" parent="Credits/MarginContainer/VBoxContainer"]
margin_right = 1870.0
margin_bottom = 259.0

[node name="Title" type="Label" parent="Credits/MarginContainer/VBoxContainer/Title"]
margin_right = 1870.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "EARTH'S SECRETS"
align = 1

[node name="Label2" type="Label" parent="Credits/MarginContainer/VBoxContainer/Title"]
margin_top = 97.0
margin_right = 1870.0
margin_bottom = 259.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A game jam game made in 1 month as part of:
- Github Game Off, November 2020  (theme constraint: \"Moonshot\") -
- Web Monetization Challenge, November 2020 (theme constraint: \"Secrets\") -"
align = 1

[node name="categs" type="HBoxContainer" parent="Credits/MarginContainer/VBoxContainer"]
margin_top = 299.0
margin_right = 1870.0
margin_bottom = 627.0

[node name="production" type="VBoxContainer" parent="Credits/MarginContainer/VBoxContainer/categs"]
margin_right = 933.0
margin_bottom = 328.0
size_flags_horizontal = 3
custom_constants/separation = 30

[node name="Person" type="VBoxContainer" parent="Credits/MarginContainer/VBoxContainer/categs/production"]
margin_right = 933.0
margin_bottom = 149.0

[node name="Name" type="Label" parent="Credits/MarginContainer/VBoxContainer/categs/production/Person"]
margin_right = 933.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Anicet Nougaret"
align = 1

[node name="Desc" type="Label" parent="Credits/MarginContainer/VBoxContainer/categs/production/Person"]
margin_top = 97.0
margin_right = 933.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Design, Art, Story, Code, Additional SFX"
align = 1

[node name="Person2" type="VBoxContainer" parent="Credits/MarginContainer/VBoxContainer/categs/production"]
margin_top = 179.0
margin_right = 933.0
margin_bottom = 328.0

[node name="Name" type="Label" parent="Credits/MarginContainer/VBoxContainer/categs/production/Person2"]
margin_right = 933.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Thibault Henrion"
align = 1

[node name="Desc" type="Label" parent="Credits/MarginContainer/VBoxContainer/categs/production/Person2"]
margin_top = 97.0
margin_right = 933.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Additional Design & Code"
align = 1

[node name="production2" type="VBoxContainer" parent="Credits/MarginContainer/VBoxContainer/categs"]
margin_left = 937.0
margin_right = 1870.0
margin_bottom = 328.0
size_flags_horizontal = 3
custom_constants/separation = 30

[node name="Label3" type="Label" parent="Credits/MarginContainer/VBoxContainer/categs/production2"]
margin_right = 933.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Licensed assets:"
align = 1

[node name="ButtonHideCredits" parent="Credits" instance=ExtResource( 10 )]
margin_left = 1730.0
margin_top = 1000.0
margin_right = 1880.0
margin_bottom = 1051.0
text = "Back"
[connection signal="pressed" from="Menu/ButtonFullscreen" to="." method="_on_ButtonFullscreen_pressed"]
[connection signal="pressed" from="Menu/ButtonSounds" to="." method="_on_ButtonSounds_pressed"]
[connection signal="pressed" from="Menu/ButtonMusic" to="." method="_on_ButtonMusic_pressed"]
[connection signal="pressed" from="Menu/ButtonAbout" to="." method="_on_ButtonAbout_pressed"]
[connection signal="pressed" from="Menu/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
[connection signal="pressed" from="Credits/ButtonHideCredits" to="." method="_on_ButtonHideCredits_pressed"]
